# zstash

./: .gitignore  Cargo.toml  README.md  decrypted_file.txt  sample.txt
src/: lib.rs  main.rs
