[package]
name = "zstash"
version = "0.1.0"
edition = "2021"
authors = ["Satuiro"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
aes-gcm = "0.10.3"
anyhow = "1.0.86"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = "0.10.8"
dirs = "5.0.1"
rustyline = "14.0.0"
rpassword = "7.3.1"
